k8s/applications/nas/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.1.220
    ports:
      - name: http
        port: 5000
      - name: ssh
        port: 22
