k8s/applications/nas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
    - name: ssh
      port: 22
